VQ-801B: NORMAL & QUICK QUOTE CLEANUP, +Import Policy risk screen

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -526,33 +526,164 @@
   },
   "gis": {
     "quotation": {
+      "quotation_data_entry": "报价：报价数据录入",
       "new_client": "新客户",
       "existing_client": "现有客户",
       "name": "姓名",
+      "client": "客户",
+      "select_a_client": "选择一个客户",
+      "id_no": "身份证号",
+      "email_address": "电子邮件地址",
+      "phone_number": "电话号码",
+      "source": "来源",
+      "branch": "分支",
+      "product": "产品",
+      "use_of_property": "财产用途",
+      "binder": "保单",
+      "cover_from": "承保开始",
+      "cover_to": "承保结束",
+      "currency": "货币",
       "year_of_manufacture": "制造年份",
       "value": "价值",
+      "car_reg_no": "车牌号",
+      "source_is_required": "来源是必需的",
+      "product_is_required": "产品是必需的",
+      "branch_is_required": "分支是必需的",
+      "binder_is_required": "保单是必需的",
+      "cover_from_is_required": "承保开始日期是必需的",
+      "cover_to_is_required": "承保结束日期是必需的",
+      "please_enter_valid_reg_no": "请输入有效的车牌号。",
+      "compute": "计算",
+      "quotation_covertypes": "报价：承保类型",
       "basic_premium": "基本保费",
-      "levies_and_taxes": "征费和税费",
-      "total_payable_premium": "总应付保费",
+      "levies_and_taxes": "征费和税款",
+      "total_payable_premium": "应付总保费",
       "value_of_vehicle": "车辆价值",
       "premium": "保费",
       "add_more_benefits": "添加更多福利",
-      "view_cover_details": "查看保单详情",
+      "view_cover_details": "查看承保详情",
       "share_quote": "分享报价",
-      "select_cover": "选择保险",
-      "additional_benefits": "附加福利",
-      "excess_applicable_under_the_cover": "保单中适用的免赔额",
-      "cover_details": "保单详情",
-      "details": "详细信息",
+      "select_cover": "选择承保",
+      "additional_benefits_details": "额外福利详情",
+      "benefit": "福利",
+      "free_limit": "免费限额",
+      "back": "返回",
+      "update_quote": "更新报价",
+      "additional_benefits": "额外福利",
+      "excess_applicable_under_the_cover": "承保下适用的超额",
+      "cover_details": "承保详情",
+      "details": "详情",
       "benefits": "福利",
       "close": "关闭",
-      "quote-details": "报价详情",
-      "quote-number": "报价编号",
+      "email": "电子邮件",
+      "sms": "短信",
+      "whatsapp": "WhatsApp",
+      "client_name": "客户姓名",
+      "send": "发送",
+      "quote_details": "报价详情",
+      "quote_number": "报价编号",
+      "quote_date": "报价日期",
       "name_of_insured": "被保险人姓名",
       "intermediary": "中介",
-      "add_another_risk": "添加另一项风险",
+      "period_of_insurance": "保险期",
+      "product_details": "产品详情",
+      "sum_insured": "保险金额",
+      "sd": "SD",
+      "total_premium": "总保费",
+      "risk_details": "风险详情",
+      "description": "描述",
+      "risk_id": "风险ID",
+      "cover_type": "承保类型",
+      "options": "选项",
+      "edit": "编辑",
+      "delete": "删除",
+      "add_another_risk": "添加另一个风险",
       "cancel_quote": "取消报价",
-      "accept_quote": "接受报价"
+      "accept_quote": "接受报价",
+      "quotation_summary": "报价摘要",
+      "provide_reason_for_cancellation": "请提供取消的原因",
+      "reason": "原因",
+
+      "quotation_risk_detail": "报价：风险部分详细信息",
+  "insured": "被保险人",
+  "subclass": "子类",
+  "vehicle_make": "车辆制造商",
+  "vehicle_model": "车型",
+  "risk_description": "风险描述",
+  "premium_band": "保费档",
+  "schedule_details": "日程详情",
+  "reg_no": "注册号",
+  "cubic_capacity": "立方容量",
+  "seating_capacity": "座位容量",
+  "body_type": "车身类型",
+  "no_data_to_display": "没有数据可显示。",
+  "edit_motor_private_details": "编辑私人汽车详情",
+  "chasis_number": "车架号",
+  "age": "年龄",
+  "registration_number": "注册号",
+  "item_no": "项目号",
+  "colour": "颜色",
+  "engine_no": "发动机号",
+  "terrorism_applicable": "适用恐怖主义",
+  "logbook_no": "登记簿号",
+  "security_device_1": "安全装置1",
+  "motor_accessories": "汽车配件",
+  "model": "型号",
+  "security_device": "安全装置",
+  "regular_driver_name": "常驻驾驶员姓名",
+  "sch_active": "SCH激活",
+  "licence_no": "许可证号",
+  "driver_licence_date": "驾驶员驾照日期",
+  "driver_sms_no": "驾驶员短信号码",
+  "driver_relation_insured": "驾驶员与被保险人的关系",
+  "driver_email_address": "驾驶员电子邮件地址",
+  "clear": "清除",
+  "save_details": "保存详情",
+  "are_you_sure_you_want_to_delete_schedule": "您确定要删除此日程吗",
+  "no_im_not": "不，我不是",
+  "yes_delete": "是的，删除",
+  "other_details": "其他详情",
+  "import_files": "导入文件",
+  "add_other_details": "添加其他详情",
+  "code": "代码",
+  "geographical_limits": "地理限制",
+  "deductible_desc": "免赔额说明",
+  "deductible_description": "免赔额描述",
+  "limitation_use": "使用限制",
+  "authorized_driver": "授权驾驶员",
+  "edit_Other_details": "编辑其他详细信息",
+  "third": "第三",
+  "section_details": "部分详情",
+  "risk_sections": "风险部分",
+  "edit_risk_section_details": "编辑风险部分详情",
+  "id": "身份证",
+  "rate_type": "费率类型",
+  "premium_type": "保费类型",
+  "limit_amount": "限额",
+  "group": "组",
+  "premium_rate": "保费率",
+  "div_by": "除以",
+  "multi_rate": "多重率",
+  "div_multi_by": "多重除以",
+  "minimum_premium": "最低保费",
+  "accumulation": "积累",
+  "remarks": "备注",
+  "declaration": "声明",
+  "are_you_sure_you_want_to_delete_section": "您确定要删除此部分吗",
+  "row_num": "行数",
+  "short_description": "简要描述",
+  "risk_clauses": "风险条款",
+  "select": "选择",
+  "heading": "标题",
+  "wording": "措辞",
+  "editable": "可编辑",
+  "assign_task": "分配任务",
+  "next": "下一步",
+  "fixed": "固定",
+  "recursive": "递归",
+  "rate_table": "费率表",
+  "absolute_range": "绝对范围",
+  "step_ranges": "阶梯范围"
     },
     "policy": {
       "underwriting_new_transaction": "核保：新交易",
@@ -687,7 +818,6 @@
       "quake_flood_zone": "地震/洪水区",
       "relational_group": "关系组",
       "risk_class": "风险等级",
-      
       "underwriting_coinsurance_details": "承保：合同分摊细节",
       "coinsurance_details": "合同分摊细节",
       "coinsurance_leader": "合同分摊领头人",
