--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -526,33 +526,163 @@
   },
   "gis": {
     "quotation": {
-      "new_client": "Neuer Kunde:",
+      "quotation_data_entry": "Angebote: Angebotsdateneingabe",
+      "new_client": "Neuer Kunde",
       "existing_client": "Bestehender Kunde",
       "name": "Name",
-      "year_of_manufacture": "Herstellungsjahr",
+      "client": "Kunde",
+      "select_a_client": "Wählen Sie einen Kunden aus",
+      "id_no": "Ausweisnummer",
+      "email_address": "E-Mail-Adresse",
+      "phone_number": "Telefonnummer",
+      "source": "Quelle",
+      "branch": "Filiale",
+      "product": "Produkt",
+      "use_of_property": "Nutzung der Immobilie",
+      "binder": "Binder",
+      "cover_from": "Deckung von",
+      "cover_to": "Deckung bis",
+      "currency": "Währung",
+      "year_of_manufacture": "Baujahr",
       "value": "Wert",
+      "car_reg_no": "KFZ-Kennzeichen",
+      "source_is_required": "Quelle ist erforderlich",
+      "product_is_required": "Produkt ist erforderlich",
+      "branch_is_required": "Filiale ist erforderlich",
+      "binder_is_required": "Binder ist erforderlich",
+      "cover_from_is_required": "Deckung von ist erforderlich",
+      "cover_to_is_required": "Deckung bis ist erforderlich",
+      "please_enter_valid_reg_no": "Bitte geben Sie eine gültige KFZ-Zulassungsnummer ein.",
+      "compute": "Berechnen",
+      "quotation_covertypes": "Angebote: Deckungsarten",
       "basic_premium": "Grundprämie",
       "levies_and_taxes": "Abgaben und Steuern",
-      "total_payable_premium": "Gesamtfällige Prämie",
+      "total_payable_premium": "Gesamtzahlbare Prämie",
       "value_of_vehicle": "Fahrzeugwert",
       "premium": "Prämie",
       "add_more_benefits": "Weitere Vorteile hinzufügen",
       "view_cover_details": "Deckungsdetails anzeigen",
       "share_quote": "Angebot teilen",
       "select_cover": "Deckung auswählen",
+      "additional_benefits_details": "Zusätzliche Vorteilsdetails",
+      "benefit": "Vorteil",
+      "free_limit": "Freigrenze",
+      "back": "Zurück",
+      "update_quote": "Angebot aktualisieren",
       "additional_benefits": "Zusätzliche Vorteile",
       "excess_applicable_under_the_cover": "Selbstbeteiligung unter der Deckung",
       "cover_details": "Deckungsdetails",
       "details": "Details",
       "benefits": "Vorteile",
       "close": "Schließen",
-      "quote-details": "Angebotsdetails",
-      "quote-number": "Angebotsnummer",
+      "email": "E-Mail",
+      "sms": "SMS",
+      "whatsapp": "WhatsApp",
+      "client_name": "Kundenname",
+      "send": "Senden",
+      "quote_details": "Angebotsdetails",
+      "quote_number": "Angebotsnummer",
+      "quote_date": "Angebotsdatum",
       "name_of_insured": "Name des Versicherten",
       "intermediary": "Vermittler",
-      "add_another_risk": "Weitere Risiken hinzufügen",
-      "cancel_quote": "Angebot abbrechen",
-      "accept_quote": "Angebot annehmen"
+      "period_of_insurance": "Versicherungsdauer",
+      "product_details": "Produktdetails",
+      "sum_insured": "Versicherungssumme",
+      "sd": "SD",
+      "total_premium": "Gesamtprämie",
+      "risk_details": "Risikodetails",
+      "description": "Beschreibung",
+      "risk_id": "Risiko-ID",
+      "cover_type": "Deckungsart",
+      "options": "Optionen",
+      "edit": "Bearbeiten",
+      "delete": "Löschen",
+      "add_another_risk": "Weiteres Risiko hinzufügen",
+      "cancel_quote": "Angebot stornieren",
+      "accept_quote": "Angebot annehmen",
+      "quotation_summary": "Angebote: Angebotszusammenfassung",
+      "provide_reason_for_cancellation": "Bitte geben Sie einen Grund für Ihre Stornierung an",
+      "reason": "Grund",
+      "quotation_risk_detail": "Angebots: Risikoabschnittsdetails",
+      "insured": "Versicherte",
+      "subclass": "Unterklasse",
+      "vehicle_make": "Fahrzeugmarke",
+      "vehicle_model": "Fahrzeugmodell",
+      "risk_description": "Risikobeschreibung",
+      "premium_band": "Prämienband",
+      "schedule_details": "Terminangaben",
+      "reg_no": "Registrierungsnummer",
+      "cubic_capacity": "Kubikkapazität",
+      "seating_capacity": "Sitzplatzkapazität",
+      "body_type": "Karosserietyp",
+      "no_data_to_display": "Keine Daten vorhanden.",
+      "edit_motor_private_details": "Private Motor Details bearbeiten",
+      "chasis_number": "Chassisnummer",
+      "age": "Alter",
+      "registration_number": "Registrierungsnummer",
+      "item_no": "Artikelnummer",
+      "colour": "Farbe",
+      "engine_no": "Motornummer",
+      "terrorism_applicable": "Anwendbares Terrorismus",
+      "logbook_no": "Logbuchnummer",
+      "security_device_1": "Sicherheitsgerät 1",
+      "motor_accessories": "Motorzubehör",
+      "model": "Modell",
+      "security_device": "Sicherheitsgerät",
+      "regular_driver_name": "Name des regelmäßigen Fahrers",
+      "sch_active": "SCH aktiv",
+      "licence_no": "Lizenznummer",
+      "driver_licence_date": "Fahrerlizenzdatum",
+      "driver_sms_no": "Fahrer-SMS-Nummer",
+      "driver_relation_insured": "Fahrerverhältnis versichert",
+      "driver_email_address": "E-Mail-Adresse des Fahrers",
+      "clear": "Löschen",
+      "save_details": "Details speichern",
+      "are_you_sure_you_want_to_delete_schedule": "Sind Sie sicher, dass Sie diesen Zeitplan löschen möchten",
+      "no_im_not": "Nein, bin ich nicht",
+      "yes_delete": "Ja, löschen",
+      "other_details": "Andere Details",
+      "import_files": "Dateien importieren",
+      "add_other_details": "Weitere Details hinzufügen",
+      "code": "Code",
+      "geographical_limits": "Geografische Grenzen",
+      "deductible_desc": "Selbstbeteiligung Beschreibung",
+      "deductible_description": "Selbstbeteiligung Beschreibung",
+      "limitation_use": "Nutzungsbeschränkung",
+      "authorized_driver": "Autorisierter Fahrer",
+      "edit_Other_details": "Andere Details bearbeiten",
+      "third": "Dritte",
+      "section_details": "Abschnittsdetails",
+      "risk_sections": "Risikoabschnitte",
+      "edit_risk_section_details": "Risikoabschnittsdetails bearbeiten",
+      "id": "ID",
+      "rate_type": "Rate Typ",
+      "premium_type": "Prämientyp",
+      "limit_amount": "Grenzbetrag",
+      "group": "Gruppe",
+      "premium_rate": "Prämienrate",
+      "div_by": "Dividiert durch",
+      "multi_rate": "Multiplikationsrate",
+      "div_multi_by": "Div Multiplikation von",
+      "minimum_premium": "Mindestprämie",
+      "accumulation": "Ansammelung",
+      "remarks": "Bemerkungen",
+      "declaration": "Erklärung",
+      "are_you_sure_you_want_to_delete_section": "Sind Sie sicher, dass Sie diesen Abschnitt löschen möchten",
+      "row_num": "Zeilennummer",
+      "short_description": "Kurzbeschreibung",
+      "risk_clauses": "Risikoklauseln",
+      "select": "Auswählen",
+      "heading": "Überschrift",
+      "wording": "Formulierung",
+      "editable": "Bearbeitbar",
+      "assign_task": "Aufgabe zuweisen",
+      "next": "Nächster",
+      "fixed": "Fest",
+      "recursive": "Rekursiv",
+      "rate_table": "Tariftabelle",
+      "absolute_range": "Absoluter Bereich",
+      "step_ranges": "Stufenbereiche"
     },
     "policy": {
       "underwriting_new_transaction": "Unterzeichnung: Neue Transaktion",
@@ -687,7 +817,6 @@
       "quake_flood_zone": "Erdbeben-/Überschwemmungszone",
       "relational_group": "Relationale Gruppe",
       "risk_class": "Risikoklasse",
-      
       "underwriting_coinsurance_details": "Zeichnung: Mitversicherungsdetails",
       "coinsurance_details": "Mitversicherungsdetails",
       "coinsurance_leader": "Mitversicherungsleiter",
