--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -527,11 +527,35 @@
   },
   "gis": {
     "quotation": {
+      "quotation_data_entry": "Quotations: Quotation Data Entry",
       "new_client": "New Client",
       "existing_client": "Existing Client",
       "name": "Name",
+      "client": "Client",
+      "select_a_client": "Select a client",
+      "id_no": "Id no",
+      "email_address": "Email Address",
+      "phone_number": "Phone Number",
+      "source": "Source",
+      "branch": "Branch",
+      "product": "Product",
+      "use_of_property": "Use of property",
+      "binder": "Binder",
+      "cover_from": "Cover from",
+      "cover_to": "Cover to",
+      "currency": "Currency",
       "year_of_manufacture": "Year of Manufacture",
       "value": "Value",
+      "car_reg_no": "Car reg no",
+      "source_is_required": "Source is required",
+      "product_is_required": "Product is required",
+      "branch_is_required": "Branch is required",
+      "binder_is_required": "Binder is required",
+      "cover_from_is_required": " Cover From is required",
+      "cover_to_is_required": " Cover to is required",
+      "please_enter_valid_reg_no": "Please enter a valid car registration number.",
+      "compute": "Compute",
+      "quotation_covertypes": "Quotations: Cover types",
       "basic_premium": "Basic Premium",
       "levies_and_taxes": "Levies and Taxes",
       "total_payable_premium": "Total Payable Premium",
@@ -541,19 +565,126 @@
       "view_cover_details": "View Cover Details",
       "share_quote": "Share Quote",
       "select_cover": "Select Cover",
-      "additional_benefits": "Additional Benefits",
+      "additional_benefits_details": "Additional benefits details",
+      "benefit": "Benefit",
+      "free_limit": "Free limit",
+      "back": "Back",
+      "update_quote": "Update quote",
+      "additional_benefits": "Additional benefits ",
       "excess_applicable_under_the_cover": "Excess applicable under the cover",
       "cover_details": "Cover Details",
       "details": "Details",
       "benefits": "Benefits",
       "close": "Close",
-      "quote-details": "Quote details",
-      "quote-number": "Quote number",
+      "email": "Email",
+      "sms": "SMS",
+      "whatsapp": "Whatsapp",
+      "client_name": "Client name",
+      "send": "Send",
+      "quote_details": "Quote details",
+      "quote_number": "Quote number",
+      "quote_date": "Quote date",
       "name_of_insured": "Name of insured",
       "intermediary": "Intermediary",
+      "period_of_insurance": "Period of insurance",
+      "product_details": "Product details",
+      "sum_insured": "Sum insured",
+      "sd": "SD",
+      "total_premium": "Total premium",
+      "risk_details": "Risk details",
+      "description": "Description",
+      "risk_id": "Risk ID",
+      "cover_type": "Cover type",
+      "options": "Options",
+      "edit": "Edit",
+      "delete": "Delete",
       "add_another_risk": "Add another risk",
       "cancel_quote": "Cancel quote",
-      "accept_quote": "Accept quote"
+      "accept_quote": "Accept quote",
+      "quotation_summary": "Quotations: Quotation summary",
+      "provide_reason_for_cancellation": "Please provide a reason for your cancellation",
+      "reason": "Reason",
+
+      "quotation_risk_detail": "Quotations:Risk Section Details",
+      "insured": "Insured",
+      "subclass": "Subclass",
+      "vehicle_make": "Vehicle make",
+      "vehicle_model": "Vehicle model",
+      "risk_description": "Risk description",
+      "premium_band": "Premium band",
+      "schedule_details": "Schedule Details",
+      "reg_no": "Reg no",
+      "cubic_capacity": "Cubic capacity",
+      "seating_capacity": "Seating capacity",
+      "body_type": "Body type",
+      "no_data_to_display": "No data to display.",
+      "edit_motor_private_details": "Edit Motor Private Details",
+      "chasis_number": "Chasis no",
+      "age": "Age",
+      "registration_number": "Reg no",
+      "item_no": "Item no",
+      "colour": "Colour",
+      "engine_no": "Engine no",
+      "terrorism_applicable": "Terrorism applicable",
+      "logbook_no": "Logbook no",
+      "security_device_1": "Security device 1",
+      "motor_accessories": "Motor accessories",
+      "model": "Model",
+      "security_device": "Security device",
+      "regular_driver_name": "Regular driver name",
+      "sch_active": "SCH active",
+      "licence_no": "Licence no",
+      "driver_licence_date": "Driver licence date",
+      "driver_sms_no": "Driver SMS no",
+      "driver_relation_insured": "Driver relation insured",
+      "driver_email_address": "Driver email address",
+      "clear": "Clear",
+      "save_details": "Save Details",
+      "are_you_sure_you_want_to_delete_schedule": "Are you sure you want to delete this schedule",
+      "no_im_not": "No, I'm not",
+      "yes_delete": "Yes,delete",
+      "other_details": "Other Details",
+      "import_files": "Import Files",
+      "add_other_details": "Add Other Details",
+      "code": "Code",
+      "geographical_limits": "Geographical limits",
+      "deductible_desc": "Deductible desc",
+      "deductible_description": "Deductible description",
+      "limitation_use": "Limitation use",
+      "authorized_driver": "Authorized Driver",
+      "edit_Other_details":"Edit Other Details",
+      "third": "Third",
+      "section_details": "Section Details",
+      "risk_sections": "Risk Sections",
+      "edit_risk_section_details":"Edit Risk Section Details",
+      "id": "ID",
+      "rate_type": "Rate Type",
+      "premium_type": "Premium Type",
+      "limit_amount": "Limit Amount",
+      "group": "Group",
+      "premium_rate": "Premium Rate",
+      "div_by": "Div By",
+      "multi_rate": "Multi Rate",
+      "div_multi_by": "Div Multi By",
+      "minimum_premium": "Minimum Premium",
+      "accumulation": "Accumulation",
+      "remarks": "Remarks",
+      "declaration": "Declaration",
+      "are_you_sure_you_want_to_delete_section": "Are you sure you want to delete this section",
+      "row_num": "Row Num",
+      "short_description": "Short Description",
+      "risk_clauses": "Risk clauses",
+      "select": "Select",
+      "heading": "Heading",
+      "wording": "Wording",
+      "editable": "Editable",
+      "assign_task": "Assign task",
+      "next": "Next",
+      "fixed":"Fixed",
+      "recursive":"Recursive",
+      "rate_table":"Rate Table",
+      "absolute_range":"Absolute Range",
+      "step_ranges":"Step Ranges"
     },
     "policy": {
       "underwriting_new_transaction": "Underwriting: New transaction",
@@ -605,7 +736,6 @@
       "staff_no": "Staff No",
       "surname": "Surname",
       "other_names": "Other Names",
-
       "underwriting_risk_details": "Underwriting: Risk Details",
       "risk_details": "Risk Details",
       "insured": "Insured",
@@ -615,7 +745,6 @@
       "binder": "Binder",
       "cover_type": "Cover type",
       "risk_cover_days": "Risk cover days",
-
       "override_but_charge": "Override/But Charge Premium",
       "ncd_applicable": "NCD applicable",
       "ncd_level": "NCD level",
@@ -663,7 +792,6 @@
       "select_file": "Select a file to upload",
       "choose_fiel": "Choose file",
       "policy_no": "Policy no.",
-
       "annually": "Annually",
       "semi_annually": "Semi-annually",
       "quaterly": "Quaterly",
@@ -691,9 +819,8 @@
       "quake_flood_zone": "Quake/flood zone",
       "relational_group": "Relation group",
       "risk_class": "Risk Class",
-
       "underwriting_coinsurance_details": "Underwriting:Co-insurance Details",
-      "coinsurance_details":"Co-insurance Details",
+      "coinsurance_details": "Co-insurance Details",
       "coinsurance_leader": " Co-insurance leader",
       "coinsurance_gross_si": "Co-insurance gross SI",
       "coinsurance_leader_combined": "Co-insurance leader combined",
@@ -704,7 +831,7 @@
       "select_coinsurer": "Select co-insurer",
       "select": "Select",
       "short_description": "Short description",
-      "no_data_to_display":"No data to display.",
+      "no_data_to_display": "No data to display.",
       "are_you_sure_you_want_to_delete": "Are you sure you want to delete?",
       "yes_delete": "Yes,delete",
       "no_im_not": "No, I'm not",
@@ -712,8 +839,8 @@
       "percentage": "Percentage",
       "premium": "Premium",
       "fee_rate": "Fee rate",
-      "fee_amount": "Fee amount" 
-       }
+      "fee_amount": "Fee amount"
+    }
   },
   "lms": {
     "common": {},
