--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -526,13 +526,37 @@
   },
   "gis": {
     "quotation": {
+      "quotation_data_entry": "Cotizaciones: Ingreso de datos de cotización",
       "new_client": "Nuevo Cliente",
       "existing_client": "Cliente Existente",
       "name": "Nombre",
+      "client": "Cliente",
+      "select_a_client": "Seleccionar un cliente",
+      "id_no": "Número de identificación",
+      "email_address": "Dirección de Correo Electrónico",
+      "phone_number": "Número de Teléfono",
+      "source": "Fuente",
+      "branch": "Sucursal",
+      "product": "Producto",
+      "use_of_property": "Uso de la Propiedad",
+      "binder": "Carpeta",
+      "cover_from": "Cobertura desde",
+      "cover_to": "Cobertura hasta",
+      "currency": "Moneda",
       "year_of_manufacture": "Año de Fabricación",
       "value": "Valor",
+      "car_reg_no": "Número de Matrícula del Coche",
+      "source_is_required": "Se requiere la fuente",
+      "product_is_required": "Se requiere el producto",
+      "branch_is_required": "Se requiere la sucursal",
+      "binder_is_required": "Se requiere la carpeta",
+      "cover_from_is_required": "La cobertura desde es requerida",
+      "cover_to_is_required": "La cobertura hasta es requerida",
+      "please_enter_valid_reg_no": "Por favor, ingrese un número de matrícula válido.",
+      "compute": "Calcular",
+      "quotation_covertypes": "Cotizaciones: Tipos de Cobertura",
       "basic_premium": "Prima Básica",
-      "levies_and_taxes": "Cargas e Impuestos",
+      "levies_and_taxes": "Impuestos y Tasas",
       "total_payable_premium": "Prima Total a Pagar",
       "value_of_vehicle": "Valor del Vehículo",
       "premium": "Prima",
@@ -540,19 +564,125 @@
       "view_cover_details": "Ver Detalles de la Cobertura",
       "share_quote": "Compartir Cotización",
       "select_cover": "Seleccionar Cobertura",
+      "additional_benefits_details": "Detalles de Beneficios Adicionales",
+      "benefit": "Beneficio",
+      "free_limit": "Límite Gratuito",
+      "back": "Atrás",
+      "update_quote": "Actualizar Cotización",
       "additional_benefits": "Beneficios Adicionales",
       "excess_applicable_under_the_cover": "Exceso aplicable bajo la cobertura",
       "cover_details": "Detalles de la Cobertura",
       "details": "Detalles",
       "benefits": "Beneficios",
       "close": "Cerrar",
-      "quote-details": "Detalles de la Cotización",
-      "quote-number": "Número de Cotización",
+      "email": "Correo Electrónico",
+      "sms": "SMS",
+      "whatsapp": "WhatsApp",
+      "client_name": "Nombre del Cliente",
+      "send": "Enviar",
+      "quote_details": "Detalles de la Cotización",
+      "quote_number": "Número de Cotización",
+      "quote_date": "Fecha de cotización",
       "name_of_insured": "Nombre del Asegurado",
       "intermediary": "Intermediario",
-      "add_another_risk": "Agregar otro riesgo",
+      "period_of_insurance": "Período de Seguro",
+      "product_details": "Detalles del Producto",
+      "sum_insured": "Suma Asegurada",
+      "sd": "SD",
+      "total_premium": "Prima Total",
+      "risk_details": "Detalles del Riesgo",
+      "description": "Descripción",
+      "risk_id": "ID del Riesgo",
+      "cover_type": "Tipo de Cobertura",
+      "options": "Opciones",
+      "edit": "Editar",
+      "delete": "Eliminar",
+      "add_another_risk": "Agregar Otro Riesgo",
       "cancel_quote": "Cancelar Cotización",
-      "accept_quote": "Aceptar Cotización"
+      "accept_quote": "Aceptar Cotización",
+      "quotation_summary": "Cotizaciones: Resumen de la cotización",
+      "provide_reason_for_cancellation": "Por favor, proporcione un motivo para su cancelación",
+      "reason": "Motivo",
+      "quotation_risk_detail": "Detalles de la sección de riesgo de cotización",
+      "insured": "Asegurado",
+      "subclass": "Subclase",
+      "vehicle_make": "Marca del vehículo",
+      "vehicle_model": "Modelo del vehículo",
+      "risk_description": "Descripción del riesgo",
+      "premium_band": "Banda de prima",
+      "schedule_details": "Detalles de la programación",
+      "reg_no": "Nº de registro",
+      "cubic_capacity": "Capacidad cúbica",
+      "seating_capacity": "Capacidad de asientos",
+      "body_type": "Tipo de carrocería",
+      "no_data_to_display": "No hay datos para mostrar.",
+      "edit_motor_private_details": "Editar detalles del motor privado",
+      "chasis_number": "Número de chasis",
+      "age": "Edad",
+      "registration_number": "Nº de registro",
+      "item_no": "Nº de ítem",
+      "colour": "Color",
+      "engine_no": "Nº de motor",
+      "terrorism_applicable": "Aplicable al terrorismo",
+      "logbook_no": "Nº de libro de registro",
+      "security_device_1": "Dispositivo de seguridad 1",
+      "motor_accessories": "Accesorios para el motor",
+      "model": "Modelo",
+      "security_device": "Dispositivo de seguridad",
+      "regular_driver_name": "Nombre del conductor habitual",
+      "sch_active": "SCH activo",
+      "licence_no": "Nº de licencia",
+      "driver_licence_date": "Fecha de la licencia de conducir",
+      "driver_sms_no": "Nº de SMS del conductor",
+      "driver_relation_insured": "Relación del conductor asegurado",
+      "driver_email_address": "Dirección de correo electrónico del conductor",
+      "clear": "Borrar",
+      "save_details": "Guardar detalles",
+      "are_you_sure_you_want_to_delete_schedule": "¿Está seguro de que desea eliminar esta programación?",
+      "no_im_not": "No, no lo estoy",
+      "yes_delete": "Sí, eliminar",
+      "other_details": "Otros detalles",
+      "import_files": "Importar archivos",
+      "add_other_details": "Agregar otros detalles",
+      "code": "Código",
+      "geographical_limits": "Límites geográficos",
+      "deductible_desc": "Descripción del deducible",
+      "deductible_description": "Descripción del deducible",
+      "limitation_use": "Uso limitado",
+      "authorized_driver": "Conductor autorizado",
+      "edit_Other_details": "Editar otros detalles",
+      "third": "Tercero",
+      "section_details": "Detalles de la sección",
+      "risk_sections": "Secciones de riesgo",
+      "edit_risk_section_details": "Editar detalles de la sección de riesgo",
+      "id": "ID",
+      "rate_type": "Tipo de tasa",
+      "premium_type": "Tipo de prima",
+      "limit_amount": "Cantidad límite",
+      "group": "Grupo",
+      "premium_rate": "Tasa de prima",
+      "div_by": "Dividido por",
+      "multi_rate": "Tasa múltiple",
+      "div_multi_by": "Dividir por múltiple",
+      "minimum_premium": "Prima mínima",
+      "accumulation": "Acumulación",
+      "remarks": "Observaciones",
+      "declaration": "Declaración",
+      "are_you_sure_you_want_to_delete_section": "¿Está seguro de que desea eliminar esta sección?",
+      "row_num": "Número de fila",
+      "short_description": "Descripción corta",
+      "risk_clauses": "Cláusulas de riesgo",
+      "select": "Seleccionar",
+      "heading": "Encabezado",
+      "wording": "Redacción",
+      "editable": "Editable",
+      "assign_task": "Asignar tarea",
+      "next": "Siguiente",
+      "fixed": "Fest",
+      "recursive": "Rekursiv",
+      "rate_table": "Tariftabelle",
+      "absolute_range": "Absoluter Bereich",
+      "step_ranges": "Stufenbereiche"
     },
     "policy": {
       "underwriting_new_transaction": "Suscripción: Nueva transacción",
@@ -687,7 +817,6 @@
       "quake_flood_zone": "Zona de terremoto/inundación",
       "relational_group": "Grupo relacional",
       "risk_class": "Clase de riesgo",
-      
       "underwriting_coinsurance_details": "Detalles de Coaseguro en Suscripción",
       "coinsurance_details": "Detalles de Coaseguro",
       "coinsurance_leader": "Líder de Coaseguro",
