--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -526,33 +526,166 @@
   },
   "gis": {
     "quotation": {
+      "quotation_data_entry": "Ofa ya Bima: Ingizo la Data ya Ofa ya Bima",
       "new_client": "Mteja Mpya",
       "existing_client": "Mteja Aliyepo",
       "name": "Jina",
-      "year_of_manufacture": "Mwaka wa Kutengeneza",
+      "client": "Mteja",
+      "select_a_client": "Chagua mteja",
+      "id_no": "Nambari ya kitambulisho",
+      "email_address": "Anwani ya Barua Pepe",
+      "phone_number": "Nambari ya Simu",
+      "source": "Chanzo",
+      "branch": "Tawi",
+      "product": "Bidhaa",
+      "use_of_property": "Matumizi ya Mali",
+      "binder": "Kibano",
+      "cover_from": "Bima kutoka",
+      "cover_to": "Bima hadi",
+      "currency": "Sarafu",
+      "year_of_manufacture": "Mwaka wa Utengenezaji",
       "value": "Thamani",
-      "basic_premium": "Malipo ya Msingi",
-      "levies_and_taxes": "Kodi na Tozo",
-      "total_payable_premium": "Jumla ya Malipo ya Bima",
+      "car_reg_no": "Nambari ya Usajili wa Gari",
+      "source_is_required": "Chanzo kinahitajika",
+      "product_is_required": "Bidhaa inahitajika",
+      "branch_is_required": "Tawi linahitajika",
+      "binder_is_required": "Kibano kinahitajika",
+      "cover_from_is_required": "Kuanzia Bima inahitajika",
+      "cover_to_is_required": "Hadi Bima inahitajika",
+      "please_enter_valid_reg_no": "Tafadhali ingiza nambari halali ya usajili wa gari.",
+      "compute": "Hesabu",
+      "quotation_covertypes": "Ofa ya Bima: Aina za Bima",
+      "basic_premium": "Gharama ya Msingi",
+      "levies_and_taxes": "Kodi na Ushuru",
+      "total_payable_premium": "Jumla ya Bima Inayolipwa",
       "value_of_vehicle": "Thamani ya Gari",
-      "premium": "Malipo ya Bima",
-      "add_more_benefits": "Ongeza Faida Zaidi",
-      "view_cover_details": "Angalia Maelezo ya Bima",
-      "share_quote": "Shiriki Pendekezo",
+      "premium": "Bima",
+      "add_more_benefits": "Ongeza Manufaa Zaidi",
+      "view_cover_details": "Tazama Maelezo ya Bima",
+      "share_quote": "Tuma Ofa ya Bima",
       "select_cover": "Chagua Bima",
-      "additional_benefits": "Faida Nyingine",
-      "excess_applicable_under_the_cover": "Zidi Inayofaa Chini ya Bima",
+      "additional_benefits_details": "Maelezo ya Manufaa ya Ziada",
+      "benefit": "Manufaa",
+      "free_limit": "Kikomo cha Bure",
+      "back": "Rudi",
+      "update_quote": "Sasisha Ofa ya Bima",
+      "additional_benefits": "Manufaa ya Ziada",
+      "excess_applicable_under_the_cover": "Excess inayotumika chini ya bima",
       "cover_details": "Maelezo ya Bima",
       "details": "Maelezo",
-      "benefits": "Faida",
+      "benefits": "Manufaa",
       "close": "Funga",
-      "quote-details": "Maelezo ya Pendekezo",
-      "quote-number": "Nambari ya Pendekezo",
-      "name_of_insured": "Jina la Mhifadhi",
+      "email": "Barua Pepe",
+      "sms": "SMS",
+      "whatsapp": "WhatsApp",
+      "client_name": "Jina la Mteja",
+      "send": "Tuma",
+      
+      "quote_details": "Maelezo ya Ofa ya Bima",
+      "quote_number": "Nambari ya Ofa ya Bima",
+      "quote_date": "Tarehe ya nukuu",
+      "name_of_insured": "Jina la Bima",
       "intermediary": "Mpatanishi",
+      "period_of_insurance": "Kipindi cha Bima",
+      "product_details": "Maelezo ya Bidhaa",
+      "sum_insured": "Jumla ya Bima",
+      "sd": "SD",
+      "total_premium": "Jumla ya Bima",
+      "risk_details": "Maelezo ya Hatari",
+      "description": "Maelezo",
+      "risk_id": "Kitambulisho cha Hatari",
+      "cover_type": "Aina ya Bima",
+      "options": "Chaguzi",
+      "edit": "Hariri",
+      "delete": "Futa",
       "add_another_risk": "Ongeza Hatari Nyingine",
-      "cancel_quote": "Ghairi Pendekezo",
-      "accept_quote": "Kubali Pendekezo"
+      "cancel_quote": "Ghairi Ofa ya Bima",
+      "accept_quote": "Kubali Ofa ya Bima",
+      "quotation_summary": "Machapisho: Muhtasari wa bima",
+      "provide_reason_for_cancellation": "Tafadhali toa sababu ya kufuta",
+      "reason": "Sababu",
+
+      "quotation_risk_detail": "Maelezo ya Sehemu ya Hatari ya Kutoa Bima",
+      "insured": "Mwenye Bima",
+      "subclass": "Nusukundi",
+      "vehicle_make": "Jina la Kufanya Gari",
+      "vehicle_model": "Mfano wa Gari",
+      "risk_description": "Maelezo ya Hatari",
+      "premium_band": "Bendi ya Malipo",
+      "schedule_details": "Maelezo ya Ratiba",
+      "reg_no": "Namba ya Usajili",
+      "cubic_capacity": "Ujazo wa Kukarabati",
+      "seating_capacity": "Uwezo wa Kukalia",
+      "body_type": "Aina ya Mwili",
+      "no_data_to_display": "Hakuna Data ya Kuonyesha.",
+      "edit_motor_private_details": "Hariri Maelezo ya Gari Binafsi",
+      "chasis_number": "Namba ya Kichasi",
+      "age": "Umri",
+      "registration_number": "Namba ya Usajili",
+      "item_no": "Namba ya Kipengee",
+      "colour": " rangi",
+      "engine_no": "Namba ya Injinia",
+      "terrorism_applicable": "Kutekelezeka kwa Ugaidi",
+      "logbook_no": "Namba ya Kitabu cha Kumbukumbu",
+      "security_device_1": "Kifaa cha Usalama 1",
+      "motor_accessories": "Vifaa vya Gari",
+      "model": "Mfano",
+      "security_device": "Kifaa cha Usalama",
+      "regular_driver_name": "Jina la Dereva Mzoea",
+      "sch_active": "SCH Imejishughulisha",
+      "licence_no": "Namba ya Leseni",
+      "driver_licence_date": "Tarehe ya Leseni ya Dereva",
+      "driver_sms_no": "Namba ya SMS ya Dereva",
+      "driver_relation_insured": "Uhusiano wa Dereva na Mwenye Bima",
+      "driver_email_address": "Anwani ya Barua pepe ya Dereva",
+      "clear": "Futa",
+      "save_details": "Hifadhi Maelezo",
+      "are_you_sure_you_want_to_delete_schedule": "Una uhakika unataka kufuta ratiba hii?",
+      "no_im_not": "Hapana, siyo",
+      "yes_delete": "Ndio, Futa",
+      "other_details": "Maelezo Mengine",
+      "import_files": "Ingiza Faili",
+      "add_other_details": "Ongeza Maelezo Mengine",
+      "code": "Nambari",
+      "geographical_limits": "Mipaka ya Kijiografia",
+      "deductible_desc": "Maelezo ya Makato",
+      "deductible_description": "Maelezo ya Makato",
+      "limitation_use": "Matumizi Yalizuiwa",
+      "authorized_driver": "Dereva Aliyoidhinishwa",
+      "edit_Other_details": "Hariri Maelezo Mengine",
+      "third": "Tatu",
+      "section_details": "Maelezo ya Sehemu",
+      "risk_sections": "Sehemu za Hatari",
+      "edit_risk_section_details": "Hariri Maelezo ya Sehemu ya Hatari",
+      "id": "Kitambulisho",
+      "rate_type": "Aina ya Kiwango",
+      "premium_type": "Aina ya Malipo",
+      "limit_amount": "Kiasi cha Kizuizi",
+      "group": "Kikundi",
+      "premium_rate": "Kiwango cha Malipo",
+      "div_by": "Gawanya na",
+      "multi_rate": "Kiwango cha Maradufu",
+      "div_multi_by": "Gawanya na Maradufu ya",
+      "minimum_premium": "Malipo ya Chini",
+      "accumulation": "Akumulasi",
+      "remarks": "Maelezo",
+      "declaration": "Tamko",
+      "are_you_sure_you_want_to_delete_section": "Una uhakika unataka kufuta sehemu hii?",
+      "row_num": "Namba ya Safu",
+      "short_description": "Maelezo Mafupi",
+      "risk_clauses": "Vifungu vya Hatari",
+      "select": "Chagua",
+      "heading": "Kichwa",
+      "wording": "Maneno",
+      "editable": "Inayoweza Kubadilishwa",
+      "assign_task": "Tangaza Kazi",
+      "next": "Ifuatayo",
+      "fixed": "Imara",
+      "recursive": "Rejelea",
+      "rate_table": "Jedwali la Viwango",
+      "absolute_range": "Kiwango Kamili",
+      "step_ranges": "Viwanja vya Hatua"
+    
     },
     "policy": {
       "underwriting_new_transaction": "Uwekaji wa Saini: Biashara Mpya",
