--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -526,33 +526,165 @@
   },
   "gis": {
     "quotation": {
+      "quotation_data_entry": "Devis : Saisie de données de devis",
       "new_client": "Nouveau Client",
       "existing_client": "Client Existant",
       "name": "Nom",
+      "client": "Client",
+      "select_a_client": "Sélectionner un client",
+      "id_no": "Numéro d'identité",
+      "email_address": "Adresse E-mail",
+      "phone_number": "Numéro de Téléphone",
+      "source": "Source",
+      "branch": "Agence",
+      "product": "Produit",
+      "use_of_property": "Usage de la Propriété",
+      "binder": "Dossier",
+      "cover_from": "Couverture de",
+      "cover_to": "Couverture à",
+      "currency": "Devise",
       "year_of_manufacture": "Année de Fabrication",
       "value": "Valeur",
+      "car_reg_no": "Numéro d'Immatriculation",
+      "source_is_required": "La source est requise",
+      "product_is_required": "Le produit est requis",
+      "branch_is_required": "L'agence est requise",
+      "binder_is_required": "Le dossier est requis",
+      "cover_from_is_required": "La couverture à partir de est requise",
+      "cover_to_is_required": "La couverture jusqu'à est requise",
+      "please_enter_valid_reg_no": "Veuillez entrer un numéro d'immatriculation valide.",
+      "compute": "Calculer",
+      "quotation_covertypes": "Devis : Types de Couverture",
       "basic_premium": "Prime de Base",
       "levies_and_taxes": "Taxes et Prélèvements",
       "total_payable_premium": "Prime Totale à Payer",
       "value_of_vehicle": "Valeur du Véhicule",
       "premium": "Prime",
-      "add_more_benefits": "Ajouter Plus d'Avantages",
+      "add_more_benefits": "Ajouter plus de bénéfices",
       "view_cover_details": "Voir les Détails de la Couverture",
-      "share_quote": "Partager la Cotation",
+      "share_quote": "Partager le Devis",
       "select_cover": "Sélectionner la Couverture",
-      "additional_benefits": "Avantages Supplémentaires",
+      "additional_benefits_details": "Détails des Bénéfices Additionnels",
+      "benefit": "Bénéfice",
+      "free_limit": "Limite Gratuite",
+      "back": "Retour",
+      "update_quote": "Mettre à Jour le Devis",
+      "additional_benefits": "Bénéfices Additionnels",
       "excess_applicable_under_the_cover": "Franchise applicable sous la couverture",
       "cover_details": "Détails de la Couverture",
       "details": "Détails",
-      "benefits": "Avantages",
+      "benefits": "Bénéfices",
       "close": "Fermer",
-      "quote-details": "Détails de la Cotation",
-      "quote-number": "Numéro de Cotation",
+      "email": "E-mail",
+      "sms": "SMS",
+      "whatsapp": "WhatsApp",
+      "client_name": "Nom du Client",
+      "send": "Envoyer",
+      
+      "quote_details": "Détails du Devis",
+      "quote_number": "Numéro de Devis",
+      "quote_date": "Date de devis",
       "name_of_insured": "Nom de l'Assuré",
       "intermediary": "Intermédiaire",
+      "period_of_insurance": "Période d'Assurance",
+      "product_details": "Détails du Produit",
+      "sum_insured": "Somme Assurée",
+      "sd": "SD",
+      "total_premium": "Prime Totale",
+      "risk_details": "Détails du Risque",
+      "description": "Description",
+      "risk_id": "ID du Risque",
+      "cover_type": "Type de Couverture",
+      "options": "Options",
+      "edit": "Modifier",
+      "delete": "Supprimer",
       "add_another_risk": "Ajouter un Autre Risque",
-      "cancel_quote": "Annuler la Cotation",
-      "accept_quote": "Accepter la Cotation"
+      "cancel_quote": "Annuler le Devis",
+      "accept_quote": "Accepter le Devis",
+      "quotation_summary": "Devis: Résumé du devis",
+      "provide_reason_for_cancellation": "Veuillez fournir une raison pour votre annulation",
+      "reason": "Raison",
+
+      "quotation_risk_detail": "Détails de la section des risques de devis",
+  "insured": "Assuré",
+  "subclass": "Sous-classe",
+  "vehicle_make": "Marque du véhicule",
+  "vehicle_model": "Modèle du véhicule",
+  "risk_description": "Description du risque",
+  "premium_band": "Tranche de prime",
+  "schedule_details": "Détails de l'horaire",
+  "reg_no": "N° d'immatriculation",
+  "cubic_capacity": "Capacité cubique",
+  "seating_capacity": "Capacité d'assise",
+  "body_type": "Type de carrosserie",
+  "no_data_to_display": "Aucune donnée à afficher.",
+  "edit_motor_private_details": "Modifier les détails du moteur privé",
+  "chasis_number": "Numéro de châssis",
+  "age": "Âge",
+  "registration_number": "N° d'immatriculation",
+  "item_no": "N° d'article",
+  "colour": "Couleur",
+  "engine_no": "N° de moteur",
+  "terrorism_applicable": "Applicable au terrorisme",
+  "logbook_no": "N° de carnet de bord",
+  "security_device_1": "Dispositif de sécurité 1",
+  "motor_accessories": "Accessoires pour moteur",
+  "model": "Modèle",
+  "security_device": "Dispositif de sécurité",
+  "regular_driver_name": "Nom du conducteur habituel",
+  "sch_active": "SCH actif",
+  "licence_no": "N° de licence",
+  "driver_licence_date": "Date de délivrance du permis de conduire",
+  "driver_sms_no": "N° de SMS du conducteur",
+  "driver_relation_insured": "Relation du conducteur assuré",
+  "driver_email_address": "Adresse e-mail du conducteur",
+  "clear": "Effacer",
+  "save_details": "Enregistrer les détails",
+  "are_you_sure_you_want_to_delete_schedule": "Êtes-vous sûr de vouloir supprimer ce planning ?",
+  "no_im_not": "Non, je ne le suis pas",
+  "yes_delete": "Oui, supprimer",
+  "other_details": "Autres détails",
+  "import_files": "Importer des fichiers",
+  "add_other_details": "Ajouter d'autres détails",
+  "code": "Code",
+  "geographical_limits": "Limites géographiques",
+  "deductible_desc": "Description de la franchise",
+  "deductible_description": "Description de la franchise",
+  "limitation_use": "Utilisation limitée",
+  "authorized_driver": "Conducteur autorisé",
+  "edit_Other_details": "Modifier les autres détails",
+  "third": "Tiers",
+  "section_details": "Détails de la section",
+  "risk_sections": "Sections de risque",
+  "edit_risk_section_details": "Modifier les détails de la section de risque",
+  "id": "ID",
+  "rate_type": "Type de taux",
+  "premium_type": "Type de prime",
+  "limit_amount": "Montant limite",
+  "group": "Groupe",
+  "premium_rate": "Taux de prime",
+  "div_by": "Divisé par",
+  "multi_rate": "Taux multiple",
+  "div_multi_by": "Divisé par multiple",
+  "minimum_premium": "Prime minimum",
+  "accumulation": "Accumulation",
+  "remarks": "Remarques",
+  "declaration": "Déclaration",
+  "are_you_sure_you_want_to_delete_section": "Êtes-vous sûr de vouloir supprimer cette section ?",
+  "row_num": "Numéro de ligne",
+  "short_description": "Description courte",
+  "risk_clauses": "Clauses de risque",
+  "select": "Sélectionner",
+  "heading": "Titre",
+  "wording": "Libellé",
+  "editable": "Modifiable",
+  "assign_task": "Assigner une tâche",
+  "next": "Suivant",
+  "fixed": "Fixé",
+  "recursive": "Récursif",
+  "rate_table": "Tableau des Tarifs",
+  "absolute_range": "Plage Absolue",
+  "step_ranges": "Plages d'Étapes"
     },
     "policy": {
       "underwriting_new_transaction": "Souscription : Nouvelle transaction",
